force-app/main/default/objects/ImpossibleClasses__x/ImpossibleClasses__x.object-meta.xml
<CustomObject>
    <description>Impossible Apex Class Table</description>
    <externalDataSource>Impossible</externalDataSource>
    <externalName>ImpossibleClasses</externalName>
    <label>Impossible class</label>
    <pluralLabel>Impossible classes</pluralLabel>
</CustomObject>