force-app/main/default/objects/ImpossibleClasses__x/fields/ApiVersion__c.field-meta.xml
<CustomField>
    <fullName>ApiVersion__c</fullName>
    <externalDeveloperName>ApiVersion</externalDeveloperName>
    <label>Api Version</label>
    <precision>12</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>