force-app/main/default/objects/ImpossibleClasses__x/fields/CreatedById__c.field-meta.xml
<CustomField>
    <fullName>CreatedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <externalDeveloperName>CreatedById</externalDeveloperName>
    <label>Created By ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CreatedById</relationshipName>
    <type>Lookup</type>
</CustomField>