force-app/main/default/objects/ImpossibleClasses__x/fields/LastModifiedById__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <externalDeveloperName>LastModifiedById</externalDeveloperName>
    <label>Last Modified By ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LastModifiedById</relationshipName>
    <type>Lookup</type>
</CustomField>