force-app/main/default/objects/ImpossibleClasses__x/fields/LengthWithoutComments__c.field-meta.xml
<CustomField>
    <fullName>LengthWithoutComments__c</fullName>
    <externalDeveloperName>LengthWithoutComments</externalDeveloperName>
    <label>Size Without Comments</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>