force-app/main/default/objects/ImpossibleClasses__x/fields/NamespacePrefix__c.field-meta.xml
<CustomField>
    <fullName>NamespacePrefix__c</fullName>
    <externalDeveloperName>NamespacePrefix</externalDeveloperName>
    <label>Namespace Prefix</label>
    <length>40</length>
    <type>Text</type>
</CustomField>